# GPSDO

./: .gitignore  readme.md
docs/: readme.md
firmware/: CMakeLists.txt  upload.ps1  upload.sh
firmware/src/: config.h  main.c  tusb_config.h  usb_descriptors.c
firmware/src/tasks/: blinking_led_task.c  blinking_led_task.h  serial_relay_task.c  serial_relay_task.h
gnss/zed-f9t/: apply_config_mobile.sh
gpsdo_cli/: gpsdo_cli.py
gpsdo_status/: CMakeLists.txt  readme.md
gpsdo_status/src/: gpsdo.cpp  gpsdo.h  main.cpp  version.h
pcb/: fp-info-cache  fp-lib-table  gpsdo.kicad_pcb  gpsdo.kicad_prl  gpsdo.kicad_pro  gpsdo.kicad_sch  sym-lib-table
pcb/3d/: 1843790.stp  BU-1420711821.stp  W25Q16JVUXIQ_TR.wrl  sip7.step  sip8.step
pcb/footprints/: 15 Pin GPSDO.kicad_mod  74437349022.kicad_mod  CONN_1843790.kicad_mod  MODULE_GPS-15136.kicad_mod  SON50P300X200X60-9N.kicad_mod  TAOGLAS_EMPCB.SMAFSTJ.B.HT.kicad_mod  aerpaw1.kicad_mod  alex.kicad_mod  testing.kicad_mod
pcb/gerbers/: gpsdo-B_Cu.gbl  gpsdo-B_Mask.gbs  gpsdo-B_Paste.gbp  gpsdo-B_Silkscreen.gbo  gpsdo-Edge_Cuts.gm1  gpsdo-F_Cu.gtl  gpsdo-F_Mask.gts  gpsdo-F_Paste.gtp  gpsdo-F_Silkscreen.gto  gpsdo-NPTH.drl  gpsdo-PTH.drl  gpsdo-job.gbrjob
pcb/symbols/: lc_xo.kicad_sym  zed-f9t.kicad_sym
